cmake_minimum_required(VERSION 3.22)
project(LearningCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(main src/Lesson1/Lesson1.cpp src/Lesson2/Lesson2.cpp src/Lesson3/Lesson3.cpp src/Lesson4/Lesson4.cpp src/Lesson5/Lesson5.cpp src/Lesson6/Lesson6.cpp src/Lesson7/Lesson7.cpp src/Lesson8/Lesson8.cpp src/Lesson9.cpp)
